JDK 17 Patterns in switch expression